<resources>
    <string name="app_name">Beauty App</string>
    <string name="skincare">skincare</string>
    <string name="remove">Remove</string>
    <string name="product_image_desc">Image of product</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="security_question_hint">Security Question</string>
    <string name="security_answer_hint">Security Answer</string>
    <string name="signup">Signup</string>
    <string name="login_redirect">Already have an account? Log in here</string>
    <string name="product_price">$%s</string>
    <string name="total_price">Total: $%s</string>
    <string name="product_name_with_quantity">%1$s (x%2$d)</string>
    <string name="product_image">Product image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price1">Price</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>

</resources>