<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:padding="16dp">

    <!-- Username input -->
    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:background="@drawable/edittext_border"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="300dp"
        android:minHeight="48dp"
    />

    <!-- Password input -->
    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edittext_border"
        android:textColor="@android:color/white"
        android:padding="12dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/signupUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
    />

    <!-- Security Question input -->
    <EditText
        android:id="@+id/signupSecurityQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/security_question_hint"
        android:inputType="text"
        android:background="@drawable/edittext_border"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/signupPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
    />

    <!-- Security Answer input -->
    <EditText
        android:id="@+id/signupSecurityAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/security_answer_hint"
        android:inputType="text"
        android:background="@drawable/edittext_border"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/signupSecurityQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
    />

    <!-- Signup Button -->
    <Button
        android:id="@+id/signupButton"
        android:layout_width="368dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/signup"
        android:textColor="#FFFDFD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupSecurityAnswer" />

    <!-- Redirect to Login Button -->
    <TextView
        android:id="@+id/loginRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:text="@string/login_redirect"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
